<resources>
    <string name="app_name">MyAnimeList</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image">Image</string>
    <string name="error">Oops.. something went wrong</string>
    <string name="empty">Empty data</string>
    <string name="title">Title</string>
    <string name="studio">Studio</string>
    <string name="score">Score</string>
    <string name="aired">Aired</string>
    <string name="type">type</string>
    <string name="synopsis">Synopsis</string>
    <string name="episodes">Episodes</string>
    <string name="year">Year</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_setting">Setting</string>
    <string name="setting">Setting</string>
</resources>