<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_marginTop="16dp"
    tools:showIn="@layout/activity_detail_anime">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="12dp"
            android:layout_marginStart="16dp"/>

        <TextView
            android:id="@+id/tv_studio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/studio"
            app:layout_constraintStart_toEndOf="@+id/tv_score"
            app:layout_constraintTop_toTopOf="@+id/tv_score"
            android:layout_marginStart="16dp"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_aired"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aired"
            app:layout_constraintStart_toEndOf="@+id/tv_studio"
            app:layout_constraintTop_toTopOf="@+id/tv_studio"
            android:layout_marginStart="16dp" />

        <TextView
            android:id="@+id/tv_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type"
            app:layout_constraintStart_toEndOf="@+id/tv_aired"
            app:layout_constraintTop_toTopOf="@id/tv_aired"
            android:layout_marginStart="16dp" />

        <TextView
            android:id="@+id/tv_synopsis_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/synopsis"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/tv_score"
            app:layout_constraintStart_toStartOf="@id/tv_score"
            android:layout_marginTop="20dp" />

        <TextView
            android:id="@+id/tv_content_synopsis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/synopsis"
            app:layout_constraintTop_toBottomOf="@id/tv_synopsis_title"
            android:layout_marginTop="6dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>